2008-03-29  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilderTest.cs: Enabled DefineUnmanagedResource and
	DefineVersionInfoResource tests for ArgumentException when native
	resource is already defined. Added tests for not supported culture
	in AssemblyCultureAttribute when definining versioninfo resource.

2008-03-16  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilderTest.cs (GetField): Add test for #351172.

2008-03-14  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilderTest.cs: Add tests for GetField ().

2008-03-06  Zoltan Varga  <vargaz@gmail.com>

	* DynamicMethodTest.cs: Add a test for anon-hosted dynamic methods.

	* ModuleBuilderTest.cs: Add a test for #367668.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* ILGeneratorTest.cs: add test for #367663, checking
	that EmitCalli deals with null return types.

2008-03-03  Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Added CreateTypeFailsWithInvalidMethodOverride.
	Test for bug #361689.

2008-02-20  Raja R Harinath  <harinath@hurrynot.org>

	* MethodBuilderTest.cs (Bug354757): New test.

2008-01-29  Zoltan Varga  <vargaz@gmail.com>

	* ModuleBuilderTest.cs: Add tests for GetTypes ().

	* AssemblyBuilderTest.cs (GetModule): Add some tests and comment out one which
	doesn't run on mono.

2008-01-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilderTest.cs: Enabled test for bug #354970.

2008-01-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilderTest.cs: Added tests for DefineUnmanagedResource and
	DefineVersionInfoResource overloads that check whether only a single
	unmanaged resource can be defined. Improved test for SetCustomAttribute.

2008-01-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeBuilderTest.cs: Enabled tests for bug #322762.

2008-01-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilderTest.cs: Added (NotWorking) test for bug #351932.

2007-12-31  Gert Driesen  <drieseng@users.sourceforge.net>
